Bug 175700 - Korganizer filtering recurring appointements does not work
Summary: Korganizer filtering recurring appointements does not work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-20 20:47 UTC by Richard Birnie
Modified: 2009-02-20 04:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Birnie 2008-11-20 20:47:36 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    Ubuntu Packages

This bug was originally reported in Kubuntu
https://bugs.launchpad.net/ubuntu/+source/kdepim/+bug/299937

Filtering appointments in KOrganizer does not work
Steps to reproduce:
1. Create a new event in Korganiser. Set it's recurrence to daily
2. Create a filter. Settings Menu > Manage View Filters > New Button
3. Name the filter and check the box marked 'Hide recurring events and Todos'
4. Click OK
5. Go to View menu > Filter > Click radio button next to MyFilter.

I don't use this feature myself I'm just a bug triager so I'm not completely sure what the expected behaviour is here. I would think the event should be hidden altogether or hidden after the first occurrence. Either way, the observed behaviour is nothing at all happens. All occurrences of the recurring event are still displayed. This is consistent for me and the user who first reported the bug. If you need more information let me know.

korganizer --version
Qt: 4.4.3
KDE: 4.1.3 (KDE 4.1.3)
KOrganizer: 4.1.0
Comment 1 Sergio Martins 2009-02-05 16:19:22 UTC
The view needs to be updated when a filter is applied.
Comment 2 Sergio Martins 2009-02-20 04:33:08 UTC
SVN commit 928763 by smartins:

In agenda view, renamed resourcesChanged() to setUpdateNeeded(). From agenda's point of view it doesn't care what caused the alteration, it just 
wants to set mPendingChanges to true.

Now we can use setUpdateNeeded() for things unrelated to resources, like filters.

BUG: 175700 


 M  +2 -1      calendarview.cpp  
 M  +3 -3      koviewmanager.cpp  
 M  +1 -1      koviewmanager.h  
 M  +3 -3      views/agendaview/agendaview.cpp  
 M  +1 -1      views/agendaview/agendaview.h  
 M  +1 -1      views/agendaview/koagendaview.cpp  
 M  +2 -1      views/agendaview/koagendaview.h  
 M  +2 -2      views/multiagendaview/multiagendaview.cpp  
 M  +1 -1      views/multiagendaview/multiagendaview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=928763