In agenda view, renamed resourcesChanged() to setUpdateNeeded(). From agenda's point of view it doesn't care what caused the alteration, it just wants to set mPendingChanges to true.

Now we can use setUpdateNeeded() for things unrelated to resources, like filters.

BUG: 175700 

svn path=/trunk/KDE/kdepim/; revision=928763