koviewmanager.cpp
@@ -533,12 +533,12 @@ void KOViewManager::currentAgendaViewTabChanged( QWidget *widget )
   }
 }
 
-void KOViewManager::resourcesChanged()
+void KOViewManager::setUpdateNeeded()
 {
   if ( mAgendaView ) {
-    mAgendaView->resourcesChanged();
+    mAgendaView->setUpdateNeeded();
   }
   if ( mAgendaSideBySideView ) {
-    mAgendaSideBySideView->resourcesChanged();
+    mAgendaSideBySideView->setUpdateNeeded();
   }
 }
