views/agendaview/koagendaview.cpp
@@ -1692,7 +1692,7 @@ bool KOAgendaView::filterByResource( Incidence *incidence )
   return true;
 }
 
-void KOAgendaView::resourcesChanged()
+void KOAgendaView::setUpdateNeeded()
 {
   mPendingChanges = true;
 }
